crates/general/fixtures/invalid/atom_and_comment_traps.zt
-- Expected: parse-error (≥1 diagnostic + lossless round-trip)
-- Spec: conventions §3.4–3.5 — atom grammar; valid comment forms start with `--`.
-- Atom grammar: `#[A-Za-z_][A-Za-z0-9_-]*` — bare `#`, `# foo` (space after #), `#1foo`
-- (digit start), `##foo` (# not valid in body) are all invalid atom forms.
-- `//` and `/* */` are not valid comment forms in .zt (only `--` variants are).

#

# this looks like a comment but is not

# foo bar baz

#1foo

#1

#-foo

#-bar-baz

##foo

##

# 123

// this is not a comment

// comment style from many languages

/* block comment attempt */

/* multi
   line
   block */

# old shell comment style

# combined with atom trap: #

#.foo

#foo.bar

{ x = 1; } // trailing comment attempt

{ z = 3; } /* inline block */

# should be atom but space makes it invalid
